[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "reconmaster"
version = "3.1.0"
description = "Automated Reconnaissance Framework for Security Testing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VIPHACKER100 ( Aryan Ahirwar )", email = "VIPHACKER.100.ORG@GMAIL.COM"},
]
keywords = [
    "reconnaissance",
    "security",
    "testing",
    "subdomain",
    "enumeration",
    "scanning",
    "penetration-testing",
    "infosec",
    "osint",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "tqdm>=4.60.0",
    "requests>=2.25.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-timeout>=1.4",
    "black>=20.8b1",
    "flake8>=3.8",
    "mypy>=0.900",
    "twine>=3.0",
    "build>=0.7",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-timeout>=1.4",
    "mock>=4.0",
]

[project.urls]
Homepage = "https://github.com/VIPHACKER100/ReconMaster"
Documentation = "https://github.com/VIPHACKER100/ReconMaster/wiki"
Repository = "https://github.com/VIPHACKER100/ReconMaster.git"
"Bug Tracker" = "https://github.com/VIPHACKER100/ReconMaster/issues"
Changelog = "https://github.com/VIPHACKER100/ReconMaster/blob/main/CHANGELOG.md"

[project.scripts]
reconmaster = "reconmaster:main"

[tool.setuptools]
packages = ["tests"]

[tool.setuptools.package-data]
reconmaster = [
    "LEGAL.md",
    "CHANGELOG.md",
    "wordlists/*.txt",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "smoke: smoke tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]

