[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "reconmaster"
version = "4.1.0"
description = "Professional-Grade Automated Reconnaissance Framework for Security Testing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VIPHACKER100 ( Aryan Ahirwar )", email = "VIPHACKER.100.ORG@GMAIL.COM"},
]
keywords = [
    "reconnaissance",
    "security",
    "testing",
    "subdomain",
    "enumeration",
    "scanning",
    "penetration-testing",
    "infosec",
    "osint",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.10.0",
    "tqdm>=4.66.1",
    "requests>=2.32.0",
    "colorama>=0.4.6",
    "PyYAML>=6.0.1",
    "schedule>=1.2.1",
    "setuptools>=70.0.0",
    "wheel>=0.42.0",
    "arjun>=2.2.1",
    "python-dotenv>=1.0.1",
    "slack-sdk>=3.27.0",
    "discord.py>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "black>=24.1.0",
    "flake8>=6.1.0",
    "mypy>=1.9.0",
    "twine>=4.0",
    "build>=0.10",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "mock>=4.0",
]

[project.urls]
Homepage = "https://github.com/VIPHACKER100/ReconMaster"
Documentation = "https://github.com/VIPHACKER100/ReconMaster/wiki"
Repository = "https://github.com/VIPHACKER100/ReconMaster.git"
"Bug Tracker" = "https://github.com/VIPHACKER100/ReconMaster/issues"
Changelog = "https://github.com/VIPHACKER100/ReconMaster/blob/main/CHANGELOG.md"

[project.scripts]
reconmaster = "reconmaster:main"

[tool.setuptools]
packages = ["tests"]

[tool.setuptools.package-data]
reconmaster = [
    "LEGAL.md",
    "CHANGELOG.md",
    "wordlists/*.txt",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"  # pytest-asyncio 0.23.0+ compatibility
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "smoke: smoke tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]

